# star-ultra

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
docs/: hrum, hrust1, hrust2 and more (by alone coder, ig5).txt  megalz.md  zx7 (by spke).txt
src/: CMakeLists.txt  main.cpp
